--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="nav-panel">
             <ul>
-                <li><a href="company.html">О компании</a></li>
+                <li><a href="index.html">О компании</a></li>
                 <li><a href="news.html">Новости</a></li>
                 <li><a href="course.html">Курс валют</a></li>
                 <li><a href="contact.html">Контактные данные</a></li>
