--- a/video.html
+++ b/video.html
@@ -7,26 +7,57 @@
         <title>Инвестиционная компани ПАО «ИК РУСС-ИНВЕСТ</title>
         <link rel="stylesheet" href="main.css">
 
-        <script>
-
-        </script>
-
         <style>
+            footer {
+                position: absolute;
+            }
+            .video {
+                background-color: white;
+                padding: 15px;
+                border-radius: 8px;
+                box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin: 20px auto;
+                max-width: 600px;
+            }
 
+            .video div {
+                font-size: 20px;
+                margin-bottom: 15px;
+                color: #003366;
+                font-weight: bold;
+            }
+
+            .video-container {
+                position: relative;
+                overflow: hidden;
+                width: 100%;
+            }
+
+            .video-container iframe {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                border: 0;
+            }
         </style>
     </head>
 
     <body>
         <header>
             Мартынов
+        </header>
+
+        <div class="nav-panel">
             <button class="nav-toggle-mobile">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-        </header>
-
-        <div class="nav-panel">
             <ul>
                 <li><a href="company.html">О компании</a></li>
                 <li><a href="news.html">Новости</a></li>
@@ -37,7 +68,13 @@
         </div>
 
         <main>
-
+            <div class="video">
+                <div>Обзок инвестиционной компании Русс Инвест</div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/x5zD2_w7Qy8?si=aR9T7jv3R8XJvwGR" 
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </main>
     
         <footer>
